finish up tests & api docs for policy
